# ship_adaptive_muon_bg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_full_mc_fixtures.yml  ci.yml  optional_stack.yml
FairShip/: .gitignore  README.md
Nflow/: README.md  __init__.py  interfaces.py  registry.py
Nflow/baselines/: __init__.py  gaussian.py  gmm.py
Nflow/legacy/: __init__.py  config.yaml  deepflow.py
Nflow/torch_models/: __init__.py  affine_coupling.py  trainer.py
ProxyTagger/: README.md  __init__.py  baseline.py  interfaces.py
configs/density_lab/: capacity_pilot_d5_cpu_v0.json  capacity_v0.json  reference_v0.json  smoke_v0.json
data/distilled/: README.md  muonsFullMC_afterMS_distilled_distribution_report.json  muonsFullMC_afterMS_distilled_manifest.json  muons_FullMC_distilled_distribution_report.json  muons_FullMC_distilled_manifest.json
data/samples/: README.md  muonsFullMC_afterMS_sample.npz  muonsFullMC_afterMS_sample_manifest.json  muons_FullMC_sample.npz  muons_FullMC_sample_manifest.json
docs/: density_lab_execution_v0.md  legacy_migration_log.md
docs/architecture/: ml_skeleton_local_pkl_v0.md  repo_architecture_v1.md
docs/audits/: git_log_20.txt  git_remotes.txt  keyword_hits_initial.txt  repo_file_inventory_initial.csv  repo_tree_initial.txt
docs/contracts/: controlled_targets_d3_d5_v0.md  controlled_targets_v0.md  density_problem_contract_v0.md  fairship_adapter_contract_v0.md  feature_view_experiment_contract_v0.md
docs/investigations/: u_definition_fairship_audit.md
docs/reviews/: afterms_evaluation_audit_v0.md  afterms_manual_execution_runbook_v0.md
graphify-out/: graph.json  manifest.json
notebooks/colab/: density_lab_quickstart.ipynb  quickstart.ipynb
scripts/: benchmark_density_runtime.py  build_afterms_shards.py  build_dataset_report.py  build_density_report.py  download_nflow_release_assets.py  generate_controlled_target.py  generate_d5_memorization_doe.py  inspect_available_labels.py  make_distilled_dataset.py  make_muon_subset.py  run_afterms_nightly_queue.py  run_density_lab.py  sample_muon_contract_fixture.py  watch_afterms_nightly_queue.py
src/ship_muon_bg/: __init__.py
tests/: conftest.py  test_affine_coupling_flow.py  test_architecture.py  test_controlled_targets.py  test_controlled_targets_d3_d5.py  test_d5_memorization_doe.py  test_data_contracts.py  test_density_artifacts.py  test_density_baselines.py  test_density_campaign.py  test_density_config_gates.py  test_density_feature_pipeline.py  test_density_gates.py  test_density_metrics.py  test_density_reporting.py  test_density_tracking.py  test_distilled.py  test_feature_views.py  test_samples.py
tests/afterms/: _frozen_split_vectors.json  test_checkpoint_reconstruction_sidecars.py  test_integration.py  test_log1p_pz.py  test_preprocessing_pipeline_jacobian.py  test_report_builder.py  test_shard_build_and_queue_resilience.py  test_split.py  test_stratify.py
(+61 files in other folders)
