[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ship-adaptive-muon-bg"
version = "0.1.0"
description = "Adaptive simulation tools for muon-induced background studies in the SHiP experiment."
readme = "README.md"
requires-python = ">=3.9"
# Core stays NumPy-only: everything needed for data contracts, interfaces,
# the simulation boundary, and the test suite. Heavy stacks are extras.
dependencies = [
    "numpy",
]

[project.optional-dependencies]
# Tested affine-coupling normalizing flow (density lab, module 2).
flow = [
    "torch",
]
# Density-lab optional stack: Gaussian-mixture baseline (scikit-learn),
# C2ST metric classifier (scikit-learn) and report plots (matplotlib).
lab = [
    "scikit-learn",
    "matplotlib",
]
# Optional experiment tracking adapter (local file store stays canonical).
tracking = [
    "mlflow",
]
# Running the quarantined Nflow/legacy code as-is (untested, HDF5-era).
legacy = [
    "torch",
    "h5py",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "pandas",
    "optuna",
    "tensorboard",
    "pyyaml",
]
dev = [
    "pytest",
]

[project.urls]
Repository = "https://github.com/fbientrigo/ship_adaptive_muon_bg"

[tool.hatch.build.targets.wheel]
# Three importable roots: the shared core (src layout) plus the two
# top-level module packages.
packages = ["src/ship_muon_bg", "Nflow", "ProxyTagger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "flow: tests that require the optional torch stack (.[flow])",
    "lab: tests that require the optional scikit-learn/matplotlib stack (.[lab])",
    "slow: slower tests (small training runs); not performance benchmarks",
]
